Changelog
=========

1.1 - unreleased
----------------

- Avoid intersection optimizations if both arguments are non-tree sets.
  [hannosch]

1.0 - 2011-07-29
----------------

- Split off from `experimental.catalogqueryplan`.
  [hannosch]