@@ -1,4 +1,4 @@
-/* Generated by Cython 0.14.1 on Sat Aug 20 23:33:44 2011 */
+/* Generated by Cython 0.14.1 on Sun Aug 21 00:13:48 2011 */
 
 #define PY_SSIZE_T_CLEAN
 #include "Python.h"
@@ -776,7 +776,7 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
  *             small = o1
  *             big = o2             # <<<<<<<<<<<<<<
  *         elif s2 and len(o2) < SMALLSETSIZE:
- *             small = o1
+ *             small = o2
  */
       __Pyx_INCREF(__pyx_v_o2);
       __Pyx_DECREF(__pyx_v_big);
@@ -788,8 +788,8 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
  *             small = o1
  *             big = o2
  *         elif s2 and len(o2) < SMALLSETSIZE:             # <<<<<<<<<<<<<<
- *             small = o1
- *             big = o2
+ *             small = o2
+ *             big = o1
  */
     __pyx_t_1 = __Pyx_PyObject_IsTrue(((PyObject *)__pyx_v_s2)); if (unlikely(__pyx_t_1 < 0)) {__pyx_filename = __pyx_f[0]; __pyx_lineno = 33; __pyx_clineno = __LINE__; goto __pyx_L1_error;}
     if (__pyx_t_1) {
@@ -807,30 +807,30 @@ static  PyObject *__pyx_f_12experimental_5btree_12intersection_ciiintersection(P
       /* "experimental/btree/intersection.pyx":34
  *             big = o2
  *         elif s2 and len(o2) < SMALLSETSIZE:
- *             small = o1             # <<<<<<<<<<<<<<
- *             big = o2
+ *             small = o2             # <<<<<<<<<<<<<<
+ *             big = o1
  *         else:
  */
-      __Pyx_INCREF(__pyx_v_o1);
+      __Pyx_INCREF(__pyx_v_o2);
       __Pyx_DECREF(__pyx_v_small);
-      __pyx_v_small = __pyx_v_o1;
+      __pyx_v_small = __pyx_v_o2;
 
       /* "experimental/btree/intersection.pyx":35
  *         elif s2 and len(o2) < SMALLSETSIZE:
- *             small = o1
- *             big = o2             # <<<<<<<<<<<<<<
+ *             small = o2
+ *             big = o1             # <<<<<<<<<<<<<<
  *         else:
  *             return iiintersection(o1, o2)
  */
-      __Pyx_INCREF(__pyx_v_o2);
+      __Pyx_INCREF(__pyx_v_o1);
       __Pyx_DECREF(__pyx_v_big);
-      __pyx_v_big = __pyx_v_o2;
+      __pyx_v_big = __pyx_v_o1;
       goto __pyx_L8;
     }
     /*else*/ {
 
       /* "experimental/btree/intersection.pyx":37
- *             big = o2
+ *             big = o1
  *         else:
  *             return iiintersection(o1, o2)             # <<<<<<<<<<<<<<
  * 
